<resources>
    <string name="app_name">Assignment2</string>

    <string name="enter_number_1">Enter Number 1</string>
    <string name="enter_number_2">Enter Number 2</string>
    <string name="result">Result</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="subtract">-</string>
    <string name="add">+</string>


    <string name="joshs_calculator">JOSH\'S CALCULATOR</string>
    <string name="ac">AC</string>
    <string name="backspace">←</string>
    <string name="percentage">%</string>

    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="x">x</string>

    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>

    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>

    <string name="equal1">=</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equal2">=</string>


</resources>