<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_number_1"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/edit2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/enter_number_2"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/add"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_sub"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/subtract"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_mul"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/multiply"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_div"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/divide"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="Result"
        android:textSize="24sp"
        tools:ignore="HardcodedText" />

    <!-- Button to Josh's Calculator at the bottom-right -->
    <Button
        android:id="@+id/btn_joshs_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginTop="32dp"
        android:text="@string/joshs_calculator" />

</LinearLayout>
